# comfy-runpod

./: .gitignore  CLAUDE.md  CUSTOM_NODES.md  DEPLOYMENT_TEST_RESULTS.md  PHASE3_TEST_RESULTS.md  PHASE4_TEST_RESULTS.md  PHASE5_TEST_RESULTS.md  PHASE6_TEST_RESULTS.md  README.md  SYSTEM_DEPENDENCIES.md  custom_nodes_requirements.txt  main.py  mask-blur-nodes.md  pyproject.toml  system_requirements.txt  temp_workflow_trimmed.json  test_workflow_trimming.py
docker/: .dockerignore  COMFYUI_VERSION.txt  Dockerfile  config.py  handler.py  model_paths.yaml  utils.py
plans/: blended-texture-workflow.md  checkerboard-texture-workflow.md  extend-texture-down.md  initial-project-setup.md  parameterized-checkerboard-generator.md  run-to-selected-node-review.md  run-to-selected-node.md  toggle-min-workers.md
scripts/: build.sh  install-custom-nodes.sh  install-system-deps.sh  launch-comfy.sh  push.sh  send-to-runpod.py  sync-models.py  test-handler.py
workflows/: README_grass_stone_blended.md  checkerboard_grass_stone_api.json  checkerboard_phase3_bottom_blend_api.json  checkerboard_phase3_bottom_blend_api_debug.json  extend_texture_down_workflow_good.json  grass_stone_blended_transition_api.json  grass_stone_blended_transition_api.json:Zone.Identifier  sample-txt2img.json  test_simple_inpaint.json  test_simple_inpaint_refined_grass.json  test_simple_inpaint_refined_grass_2.json  test_simple_inpaint_refined_grass_2_api.json  test_simple_inpaint_refined_grass_3.json  test_simple_inpaint_refined_grass_3_api.json  test_simple_inpaint_refined_grass_4_blend.json  (+1 more)
(+9 files in other folders)
