[project]
name = "comfy-runpod"
version = "0.1.0"
description = "Production-ready ComfyUI deployment system for local and RunPod serverless infrastructure"
requires-python = ">=3.10"
dependencies = [
    "runpod>=1.6.0",
    "requests>=2.31.0",
    "pillow>=10.0.0",
    "pyyaml>=6.0.0",
    "boto3>=1.28.0",
]
